--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "personal-website-2.0",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "My personal website to share my interests and projects",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Omid Shahidi <omidsh@umich.edu>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@loadable/component": "^5.14.1",
+    "autoprefixer": "^10.2.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
+    "gatsby-plugin-postcss": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "material-design-icons": "^3.0.1",
+    "p5": "^1.2.0",
+    "postcss": "^8.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-p5-wrapper": "^2.3.0",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
